# Group_D_Gomoku

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  game.c  game.cpp  game.h  main.c  main.cpp  makefile
include/board/: board.h
include/button_logic/: button_logic.h
include/game/: game.h
include/game_logic/: game_logic.h
include/graphic/: graphic.h
include/graphic_logic/: logic.h
include/test/: test.h
src/: main.c  start.glade
src/board/: board.c
src/button_logic/: button_logic.c
src/game/: game.c
src/game_logic/: game_logic.c
src/graphic/: graphic.c
src/graphic_logic/: logic.c
test/src/: main_a.c  main_b.c  main_c.c  main_d.c  main_e.c  main_f.c  main_g.c
test/src/board/: board_a.c
test/src/game/: game_a.c  game_b.c  game_c.c
test/src/tests/: test_1.c  test_2.c  test_3.c  test_4.c  test_5.c  test_6.c  test_7.c  test_8.c  test_9.c
